# nexus-ledger

./: .gitignore  LICENSE  Procfile  README.md  SUPPLY_CHAIN_SPEC.md  agent.json  agent_b.db  agent_log.json  cross_machine_demo.py  demo.py  exchange_demo.py  ledger.py  nexus_ledger.py  proof_anchor.py  protocol.py  pyproject.toml  railway.toml  registry.py  relay_demo.py  relay_server.py  requirements.txt  server.py  test_e2e.py  test_graphify_bridge.py  test_nexus.py  test_supply_chain.py  transport.py
.demo_runtime/keys_iris/: iris.json
.demo_runtime/keys_mercury/: mercury.json
demo_keys_a/: machine_a.json
demo_keys_b/: machine_b.json
docs/: blog-trust-gap.md  index.html
examples/: autogen_trust.py  crewai_trust.py  langgraph_trust.py  openclaw_trust.py
integrations/: autogen_tool.py  crewai_tool.py  langchain_tool.py  openclaw-skill.md
keys_agent_a/: mercury_a.json
keys_agent_b/: iris_b.json
launch/: discord-dm-outreach.md  source-for-grok.txt  viral-launch-march25.md
nexus_ledger/: __init__.py  agent.py  cli.py  crypto.py  erc8004.py  eth_anchor.py  graphify_bridge.py  ledger.py  receipt_types.py  relay_client.py  relay_manager.py  supply_chain.py  task_manager.py  transport.py  trust.py  ws_transport.py
nexus_ledger.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/nexus_ledger/: __init__.py  agent.py
web-demo/: index.html
