[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-ledger"
version = "2.3.0"
description = "Pure sign + log + anchor library for agent proof"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pynacl>=1.5.0",
]

[project.optional-dependencies]
solana = [
  "solders>=0.21.0",
  "solana>=0.35.0",
]

transport = [
  "aiohttp>=3.9.0",
]

test = [
  "pytest>=8.0.0",
]

[tool.setuptools]
py-modules = ["nexus_ledger", "protocol", "ledger", "proof_anchor", "transport"]
