[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-ledger"
version = "4.2.2"
description = "Pure sign + log + anchor library for agent proof"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pynacl>=1.5.0",
]

[project.scripts]
nexus-ledger = "nexus_ledger.cli:main"

[project.optional-dependencies]
solana = [
  "solders>=0.21.0",
  "solana>=0.35.0",
]

transport = [
  "aiohttp>=3.9.0",
  "websockets>=12.0",
]

erc8004 = [
  "web3>=7.0.0",
]

ethereum = [
  "eth-account>=0.11.0",
]

test = [
  "pytest>=8.0.0",
]

[tool.setuptools]
packages = ["nexus_ledger"]
